# detect.py

./: README.md  setup.cfg  setup.py
detect/: __init__.py
tests/detect/examples/: py.py
tests/examples/: os.py
