# https://pypi.org/project/setupcfg-generator/
[metadata]
name = detect
version = 2018.11.19
url = https://github.com/looking-for-a-job/detect.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = detect

[options]
install_requires = 
	setuptools
packages = 
	detect
